# wiki-contributor-impact

./: .gitignore  LICENSE  README.md  SCHEDULE.md  pyproject.toml  requirements.txt
src/wikicontrib/: __init__.py  __main__.py  api.py  cache.py  classify.py  diff.py  metrics.py  reverts.py  store.py  titles.py  tokenize.py
tests/: test_api.py  test_cache.py  test_classify.py  test_diff.py  test_labelled_sample.py  test_metrics.py  test_reverts.py  test_smoke.py  test_store.py  test_titles.py  test_tokenize.py
tests/fixtures/: labelled_edits.json
