[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wikicontrib"
version = "0.1.0"
description = "A data-driven model of Wikipedia contributor impact"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Han Zhu" }]
dependencies = ["requests>=2.31", "pandas>=2.0", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
